# progetto-informatica

./: .gitignore  CMakeLists.txt  Car.cpp  Car.h  Game.h  Object.cpp  Object.h  Obstacle.h  Player.h  Position.cpp  Position.h  game.h  powerup.h
src/: Car.cpp  Car.h  Game.cpp  Game.h  Input.cpp  Input.h  Object.cpp  Object.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  Position.cpp  Position.h  Powerup.cpp  Powerup.h  Tests.cpp  Tests.h  main.cpp  utilities.cpp  utilities.h
